--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,3 +36,9 @@
 .navbar-transparent .navbar-brand {
     filter: none;
 }
+
+.form-select:focus {
+    border-color: #dbcebc !important;
+    box-shadow: 0 0 0 .25rem rgba(195, 150, 15, 0.5);
+    outline: 0;
+}
