--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,3 +42,79 @@
     box-shadow: 0 0 0 .25rem rgba(195, 150, 15, 0.5);
     outline: 0;
 }
+
+.content-header {
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding: 1.2rem 2rem;
+    margin-bottom: 0.8rem;
+    color: #A67C40;
+    background-color: #dbcebc;
+    border-bottom: 6px solid rgba(195, 150, 15, 0.5);
+}
+
+.nav-pills .nav-link {
+    background: none;
+    border: 0;
+    border-radius: var(--rw-nav-pills-border-radius);
+    color: #A67C40 !important;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    background-color: #A67C40 !important;
+    color: #fff !important;
+}
+
+.accordion-flush .accordion-button:not(.collapsed) {
+    background-color: transparent;
+    color: #A67C40;
+}
+
+.floating-card {
+    padding: 20px;
+    border-radius: 4px;
+    box-shadow: rgba(195, 150, 15, 0.5) 0px 4px 4px 0px;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
+    width: inherit;
+    position: absolute;
+    top: 20%;
+}
+
+/* Responsive Media Query For Smartphones*/
+
+@media only screen and (min-width: 320px) and (max-width: 700px) {
+    
+    .floating-card {
+        padding: 20px;
+        border-radius: 4px;
+        box-shadow: rgba(195, 150, 15, 0.5) 0px 4px 4px 0px;
+        margin-bottom: 3rem;
+        margin-top: 3rem;
+        width: 100%;
+        position: inherit;
+    }
+
+    .w-50 {
+        width: 30%!important;
+    }
+}
+
+/* Responsive Media Query For Ipads & Tablets*/
+
+@media only screen and (min-width: 768px) and (max-width: 1300px) {
+
+    .floating-card {
+        padding: 20px;
+        border-radius: 4px;
+        box-shadow: rgba(195, 150, 15, 0.5) 0px 4px 4px 0px;
+        margin-bottom: 3rem;
+        margin-top: 3rem;
+        width: 100%;
+        position: inherit;
+    }
+
+    .w-50 {
+        width: 30%!important;
+    }
+}
